# CS571

./: CMakeLists.txt  defs.mk  gdb.script
kern/compile/ASST2/: .depend  files.mk  kernel
kern/compile/ASST3/: .depend  .depend.autoconf.c  .depend.bathroom.c  .depend.main.c  .depend.whalemating.c  files.mk  kernel
kern/include/: hello.h  synch.h
kern/main/: hello.c  main.c  menu.c
kern/synchprobs/: whalemating.c
kern/thread/: synch.c
root/: kernel-ASST2  sys161.conf
