cmake_minimum_required(VERSION 3.12)
project(os161)

set(CMAKE_CXX_STANDARD 14)

include_directories(common/gcc-millicode)
include_directories(kern/arch/mips/include)
include_directories(kern/arch/mips/include/kern)
include_directories(kern/arch/mips/thread)
include_directories(kern/arch/sys161/include)
include_directories(kern/compile/ASST2)
include_directories(kern/compile/ASST2/includelinks)
include_directories(kern/compile/ASST2/includelinks/kern)
include_directories(kern/compile/ASST2/includelinks/kern/machine)
include_directories(kern/compile/ASST2/includelinks/kern/mips)
include_directories(kern/compile/ASST2/includelinks/machine)
include_directories(kern/compile/ASST2/includelinks/machine/kern)
include_directories(kern/compile/ASST2/includelinks/mips)
include_directories(kern/compile/ASST2/includelinks/mips/kern)
include_directories(kern/compile/ASST2/includelinks/platform)
include_directories(kern/compile/ASST2/includelinks/sys161)
include_directories(kern/dev/generic)
include_directories(kern/dev/lamebus)
include_directories(kern/fs/semfs)
include_directories(kern/fs/sfs)
include_directories(kern/include)
include_directories(kern/include/kern)
include_directories(userland/include)
include_directories(userland/include/sys)
include_directories(userland/include/test)
include_directories(userland/include/types)
include_directories(userland/lib/hostcompat)
include_directories(userland/sbin/mksfs)
include_directories(userland/sbin/sfsck)
include_directories(userland/testbin/badcall)
include_directories(userland/testbin/f_test)
include_directories(userland/testbin/frack)
include_directories(userland/testbin/randcall)

add_executable(os161
        common/gcc-millicode/adddi3.c
        common/gcc-millicode/anddi3.c
        common/gcc-millicode/ashldi3.c
        common/gcc-millicode/ashrdi3.c
        common/gcc-millicode/cmpdi2.c
        common/gcc-millicode/divdi3.c
        common/gcc-millicode/iordi3.c
        common/gcc-millicode/longlong.h
        common/gcc-millicode/lshldi3.c
        common/gcc-millicode/lshrdi3.c
        common/gcc-millicode/moddi3.c
        common/gcc-millicode/muldi3.c
        common/gcc-millicode/negdi2.c
        common/gcc-millicode/notdi2.c
        common/gcc-millicode/qdivrem.c
        common/gcc-millicode/subdi3.c
        common/gcc-millicode/ucmpdi2.c
        common/gcc-millicode/udivdi3.c
        common/gcc-millicode/umoddi3.c
        common/gcc-millicode/xordi3.c
        common/libc/printf/__printf.c
        common/libc/printf/snprintf.c
        common/libc/stdlib/atoi.c
        common/libc/string/bzero.c
        common/libc/string/memcpy.c
        common/libc/string/memmove.c
        common/libc/string/memset.c
        common/libc/string/strcat.c
        common/libc/string/strchr.c
        common/libc/string/strcmp.c
        common/libc/string/strcpy.c
        common/libc/string/strlen.c
        common/libc/string/strrchr.c
        common/libc/string/strtok_r.c
        design/assignments.txt
        design/shell.txt
        design/usermalloc.txt
        kern/arch/mips/include/kern/endian.h
        kern/arch/mips/include/kern/regdefs.h
        kern/arch/mips/include/kern/setjmp.h
        kern/arch/mips/include/kern/signal.h
        kern/arch/mips/include/kern/types.h
        kern/arch/mips/include/current.h
        kern/arch/mips/include/elf.h
        kern/arch/mips/include/membar.h
        kern/arch/mips/include/specialreg.h
        kern/arch/mips/include/spinlock.h
        kern/arch/mips/include/thread.h
        kern/arch/mips/include/tlb.h
        kern/arch/mips/include/trapframe.h
        kern/arch/mips/include/types.h
        kern/arch/mips/include/vm.h
        kern/arch/mips/locore/trap.c
        kern/arch/mips/syscall/syscall.c
        kern/arch/mips/thread/cpu.c
        kern/arch/mips/thread/switchframe.c
        kern/arch/mips/thread/switchframe.h
        kern/arch/mips/thread/thread_machdep.c
        kern/arch/mips/vm/dumbvm.c
        kern/arch/mips/vm/ram.c
        kern/arch/sys161/dev/lamebus_machdep.c
        kern/arch/sys161/include/bus.h
        kern/arch/sys161/include/maxcpus.h
        kern/compile/ASST2/includelinks/machine/kern/endian.h
        kern/compile/ASST2/includelinks/machine/kern/regdefs.h
        kern/compile/ASST2/includelinks/machine/kern/setjmp.h
        kern/compile/ASST2/includelinks/machine/kern/signal.h
        kern/compile/ASST2/includelinks/machine/kern/types.h
        kern/compile/ASST2/includelinks/mips/kern/endian.h
        kern/compile/ASST2/includelinks/mips/kern/regdefs.h
        kern/compile/ASST2/includelinks/mips/kern/setjmp.h
        kern/compile/ASST2/includelinks/mips/kern/signal.h
        kern/compile/ASST2/includelinks/mips/kern/types.h
        kern/compile/ASST2/autoconf.c
        kern/compile/ASST2/autoconf.h
        kern/compile/ASST2/opt-dumbvm.h
        kern/compile/ASST2/opt-net.h
        kern/compile/ASST2/opt-netfs.h
        kern/compile/ASST2/opt-noasserts.h
        kern/compile/ASST2/opt-semfs.h
        kern/compile/ASST2/opt-sfs.h
        kern/compile/ASST2/opt-synchprobs.h
        kern/compile/ASST2/vers.c
        kern/dev/generic/beep.c
        kern/dev/generic/beep.h
        kern/dev/generic/console.c
        kern/dev/generic/console.h
        kern/dev/generic/random.c
        kern/dev/generic/random.h
        kern/dev/generic/rtclock.c
        kern/dev/generic/rtclock.h
        kern/dev/lamebus/beep_ltimer.c
        kern/dev/lamebus/con_lscreen.c
        kern/dev/lamebus/con_lser.c
        kern/dev/lamebus/emu.c
        kern/dev/lamebus/emu.h
        kern/dev/lamebus/emu_att.c
        kern/dev/lamebus/lamebus.c
        kern/dev/lamebus/lamebus.h
        kern/dev/lamebus/lhd.c
        kern/dev/lamebus/lhd.h
        kern/dev/lamebus/lhd_att.c
        kern/dev/lamebus/lnet.c
        kern/dev/lamebus/lnet_att.c
        kern/dev/lamebus/lrandom.c
        kern/dev/lamebus/lrandom.h
        kern/dev/lamebus/lrandom_att.c
        kern/dev/lamebus/lscreen.c
        kern/dev/lamebus/lscreen.h
        kern/dev/lamebus/lscreen_att.c
        kern/dev/lamebus/lser.c
        kern/dev/lamebus/lser.h
        kern/dev/lamebus/lser_att.c
        kern/dev/lamebus/ltimer.c
        kern/dev/lamebus/ltimer.h
        kern/dev/lamebus/ltimer_att.c
        kern/dev/lamebus/ltrace.c
        kern/dev/lamebus/ltrace.h
        kern/dev/lamebus/ltrace_att.c
        kern/dev/lamebus/random_lrandom.c
        kern/dev/lamebus/rtclock_ltimer.c
        kern/fs/semfs/semfs.h
        kern/fs/semfs/semfs_fsops.c
        kern/fs/semfs/semfs_obj.c
        kern/fs/semfs/semfs_vnops.c
        kern/fs/sfs/sfs_balloc.c
        kern/fs/sfs/sfs_bmap.c
        kern/fs/sfs/sfs_dir.c
        kern/fs/sfs/sfs_fsops.c
        kern/fs/sfs/sfs_inode.c
        kern/fs/sfs/sfs_io.c
        kern/fs/sfs/sfs_vnops.c
        kern/fs/sfs/sfsprivate.h
        kern/gdbscripts/array
        kern/gdbscripts/wchan
        kern/include/kern/endian.h
        kern/include/kern/errmsg.h
        kern/include/kern/errno.h
        kern/include/kern/fcntl.h
        kern/include/kern/ioctl.h
        kern/include/kern/iovec.h
        kern/include/kern/limits.h
        kern/include/kern/reboot.h
        kern/include/kern/resource.h
        kern/include/kern/seek.h
        kern/include/kern/sfs.h
        kern/include/kern/signal.h
        kern/include/kern/socket.h
        kern/include/kern/stat.h
        kern/include/kern/stattypes.h
        kern/include/kern/syscall.h
        kern/include/kern/time.h
        kern/include/kern/types.h
        kern/include/kern/unistd.h
        kern/include/kern/wait.h
        kern/include/addrspace.h
        kern/include/array.h
        kern/include/bitmap.h
        kern/include/cdefs.h
        kern/include/clock.h
        kern/include/copyinout.h
        kern/include/cpu.h
        kern/include/current.h
        kern/include/device.h
        kern/include/elf.h
        kern/include/emufs.h
        kern/include/endian.h
        kern/include/fs.h
        kern/include/lib.h
        kern/include/limits.h
        kern/include/mainbus.h
        kern/include/membar.h
        kern/include/proc.h
        kern/include/setjmp.h
        kern/include/sfs.h
        kern/include/signal.h
        kern/include/spinlock.h
        kern/include/spl.h
        kern/include/stat.h
        kern/include/stdarg.h
        kern/include/synch.h
        kern/include/syscall.h
        kern/include/test.h
        kern/include/thread.h
        kern/include/threadlist.h
        kern/include/threadprivate.h
        kern/include/types.h
        kern/include/uio.h
        kern/include/version.h
        kern/include/vfs.h
        kern/include/vm.h
        kern/include/vnode.h
        kern/include/wchan.h
        kern/lib/array.c
        kern/lib/bitmap.c
        kern/lib/bswap.c
        kern/lib/kgets.c
        kern/lib/kprintf.c
        kern/lib/misc.c
        kern/lib/time.c
        kern/lib/uio.c
        kern/main/main.c
        kern/main/menu.c
        kern/proc/proc.c
        kern/synchprobs/bathroom.c
        kern/synchprobs/whalemating.c
        kern/syscall/loadelf.c
        kern/syscall/runprogram.c
        kern/syscall/time_syscalls.c
        kern/test/arraytest.c
        kern/test/bitmaptest.c
        kern/test/fstest.c
        kern/test/kmalloctest.c
        kern/test/nettest.c
        kern/test/synchtest.c
        kern/test/threadlisttest.c
        kern/test/threadtest.c
        kern/test/tt3.c
        kern/thread/clock.c
        kern/thread/spinlock.c
        kern/thread/spl.c
        kern/thread/synch.c
        kern/thread/thread.c
        kern/thread/threadlist.c
        kern/vfs/device.c
        kern/vfs/devnull.c
        kern/vfs/vfscwd.c
        kern/vfs/vfsfail.c
        kern/vfs/vfslist.c
        kern/vfs/vfslookup.c
        kern/vfs/vfspath.c
        kern/vfs/vnode.c
        kern/vm/addrspace.c
        kern/vm/copyinout.c
        kern/vm/kmalloc.c
        kern/Makefile
        man/bin/cat.html
        man/bin/cp.html
        man/bin/false.html
        man/bin/index.html
        man/bin/ln.html
        man/bin/ls.html
        man/bin/Makefile
        man/bin/mkdir.html
        man/bin/mv.html
        man/bin/pwd.html
        man/bin/rm.html
        man/bin/rmdir.html
        man/bin/sh.html
        man/bin/sync.html
        man/bin/tac.html
        man/bin/true.html
        man/dev/beep.html
        man/dev/con.html
        man/dev/emu.html
        man/dev/index.html
        man/dev/lamebus.html
        man/dev/lhd.html
        man/dev/lnet.html
        man/dev/lrandom.html
        man/dev/lscreen.html
        man/dev/lser.html
        man/dev/ltimer.html
        man/dev/ltrace.html
        man/dev/Makefile
        man/dev/null.html
        man/dev/random.html
        man/dev/rtclock.html
        man/libc/__vprintf.html
        man/libc/abort.html
        man/libc/assert.html
        man/libc/atoi.html
        man/libc/bzero.html
        man/libc/calloc.html
        man/libc/err.html
        man/libc/execvp.html
        man/libc/exit.html
        man/libc/free.html
        man/libc/getchar.html
        man/libc/getcwd.html
        man/libc/getenv.html
        man/libc/index.html
        man/libc/Makefile
        man/libc/malloc.html
        man/libc/memcmp.html
        man/libc/memcpy.html
        man/libc/memmove.html
        man/libc/memset.html
        man/libc/printf.html
        man/libc/putchar.html
        man/libc/puts.html
        man/libc/random.html
        man/libc/realloc.html
        man/libc/setjmp.html
        man/libc/snprintf.html
        man/libc/stdarg.html
        man/libc/strcat.html
        man/libc/strchr.html
        man/libc/strcmp.html
        man/libc/strcpy.html
        man/libc/strerror.html
        man/libc/strlen.html
        man/libc/strrchr.html
        man/libc/strtok.html
        man/libc/strtok_r.html
        man/libc/system.html
        man/libc/time.html
        man/libc/warn.html
        man/misc/index.html
        man/misc/Makefile
        man/misc/semfs.html
        man/sbin/dumpsfs.html
        man/sbin/halt.html
        man/sbin/index.html
        man/sbin/Makefile
        man/sbin/mksfs.html
        man/sbin/poweroff.html
        man/sbin/reboot.html
        man/sbin/sfsck.html
        man/syscall/__getcwd.html
        man/syscall/__time.html
        man/syscall/_exit.html
        man/syscall/chdir.html
        man/syscall/close.html
        man/syscall/dup2.html
        man/syscall/errno.html
        man/syscall/execv.html
        man/syscall/fork.html
        man/syscall/fstat.html
        man/syscall/fsync.html
        man/syscall/ftruncate.html
        man/syscall/getdirentry.html
        man/syscall/getpid.html
        man/syscall/index.html
        man/syscall/ioctl.html
        man/syscall/link.html
        man/syscall/lseek.html
        man/syscall/lstat.html
        man/syscall/Makefile
        man/syscall/mkdir.html
        man/syscall/open.html
        man/syscall/pipe.html
        man/syscall/read.html
        man/syscall/readlink.html
        man/syscall/reboot.html
        man/syscall/remove.html
        man/syscall/rename.html
        man/syscall/rmdir.html
        man/syscall/sbrk.html
        man/syscall/stat.html
        man/syscall/symlink.html
        man/syscall/sync.html
        man/syscall/waitpid.html
        man/syscall/write.html
        man/testbin/add.html
        man/testbin/argtest.html
        man/testbin/badcall.html
        man/testbin/bigexec.html
        man/testbin/bigfile.html
        man/testbin/bigseek.html
        man/testbin/bloat.html
        man/testbin/conman.html
        man/testbin/crash.html
        man/testbin/ctest.html
        man/testbin/dirconc.html
        man/testbin/dirseek.html
        man/testbin/dirtest.html
        man/testbin/f_test.html
        man/testbin/factorial.html
        man/testbin/farm.html
        man/testbin/faulter.html
        man/testbin/filetest.html
        man/testbin/forkbomb.html
        man/testbin/forktest.html
        man/testbin/frack.html
        man/testbin/guzzle.html
        man/testbin/hash.html
        man/testbin/hog.html
        man/testbin/huge.html
        man/testbin/index.html
        man/testbin/kitchen.html
        man/testbin/Makefile
        man/testbin/malloctest.html
        man/testbin/matmult.html
        man/testbin/multiexec.html
        man/testbin/palin.html
        man/testbin/parallelvm.html
        man/testbin/poisondisk.html
        man/testbin/psort.html
        man/testbin/quinthuge.html
        man/testbin/quintmat.html
        man/testbin/quintsort.html
        man/testbin/randcall.html
        man/testbin/redirect.html
        man/testbin/rmdirtest.html
        man/testbin/rmtest.html
        man/testbin/sbrktest.html
        man/testbin/sink.html
        man/testbin/sort.html
        man/testbin/sparsefile.html
        man/testbin/sty.html
        man/testbin/tail.html
        man/testbin/tictac.html
        man/testbin/triplehuge.html
        man/testbin/triplemat.html
        man/testbin/triplesort.html
        man/testbin/usemtest.html
        man/testbin/userthreads.html
        man/testbin/zero.html
        man/index.html
        man/Makefile
        man/man.css
        man/manindex.css
        mk/fixdepends.sh
        mk/installheaders.sh
        mk/os161.baserules.mk
        mk/os161.compile.mk
        mk/os161.config-mips.mk
        mk/os161.config.mk
        mk/os161.hostcompile.mk
        mk/os161.hostlib.mk
        mk/os161.hostprog.mk
        mk/os161.includes.mk
        mk/os161.kernel.mk
        mk/os161.lib.mk
        mk/os161.man.mk
        mk/os161.mkdirs.mk
        mk/os161.prog.mk
        mk/os161.subdir.mk
        root/kernel-ASST2
        root/LHD0.img
        root/LHD1.img
        root/sys161.conf
        userland/bin/cat/cat.c
        userland/bin/cp/cp.c
        userland/bin/false/false.c
        userland/bin/ln/ln.c
        userland/bin/ls/ls.c
        userland/bin/mkdir/mkdir.c
        userland/bin/mv/mv.c
        userland/bin/pwd/pwd.c
        userland/bin/rm/rm.c
        userland/bin/rmdir/rmdir.c
        userland/bin/sh/sh.c
        userland/bin/sync/sync.c
        userland/bin/tac/tac.c
        userland/bin/true/true.c
        userland/include/sys/cdefs.h
        userland/include/sys/endian.h
        userland/include/sys/ioctl.h
        userland/include/sys/null.h
        userland/include/sys/reboot.h
        userland/include/sys/stat.h
        userland/include/sys/types.h
        userland/include/sys/wait.h
        userland/include/test/quint.h
        userland/include/test/triple.h
        userland/include/types/size_t.h
        userland/include/assert.h
        userland/include/err.h
        userland/include/errno.h
        userland/include/fcntl.h
        userland/include/limits.h
        userland/include/setjmp.h
        userland/include/signal.h
        userland/include/stdarg.h
        userland/include/stdbool.h
        userland/include/stdint.h
        userland/include/stdio.h
        userland/include/stdlib.h
        userland/include/string.h
        userland/include/time.h
        userland/include/unistd.h
        userland/lib/hostcompat/err.c
        userland/lib/hostcompat/host-err.h
        userland/lib/hostcompat/hostcompat.c
        userland/lib/hostcompat/hostcompat.h
        userland/lib/hostcompat/ntohll.c
        userland/lib/hostcompat/time.c
        userland/lib/libc/stdio/__puts.c
        userland/lib/libc/stdio/getchar.c
        userland/lib/libc/stdio/printf.c
        userland/lib/libc/stdio/putchar.c
        userland/lib/libc/stdio/puts.c
        userland/lib/libc/stdlib/abort.c
        userland/lib/libc/stdlib/exit.c
        userland/lib/libc/stdlib/getenv.c
        userland/lib/libc/stdlib/malloc.c
        userland/lib/libc/stdlib/qsort.c
        userland/lib/libc/stdlib/random.c
        userland/lib/libc/stdlib/system.c
        userland/lib/libc/string/memcmp.c
        userland/lib/libc/string/strerror.c
        userland/lib/libc/string/strtok.c
        userland/lib/libc/time/time.c
        userland/lib/libc/unix/__assert.c
        userland/lib/libc/unix/err.c
        userland/lib/libc/unix/errno.c
        userland/lib/libc/unix/execvp.c
        userland/lib/libc/unix/getcwd.c
        userland/lib/libtest/quint.c
        userland/lib/libtest/triple.c
        userland/sbin/dumpsfs/dumpsfs.c
        userland/sbin/halt/halt.c
        userland/sbin/mksfs/disk.c
        userland/sbin/mksfs/disk.h
        userland/sbin/mksfs/mksfs.c
        userland/sbin/mksfs/support.c
        userland/sbin/mksfs/support.h
        userland/sbin/poweroff/poweroff.c
        userland/sbin/reboot/reboot.c
        userland/sbin/sfsck/compat.h
        userland/sbin/sfsck/freemap.c
        userland/sbin/sfsck/freemap.h
        userland/sbin/sfsck/ibmacros.h
        userland/sbin/sfsck/inode.c
        userland/sbin/sfsck/inode.h
        userland/sbin/sfsck/main.c
        userland/sbin/sfsck/main.h
        userland/sbin/sfsck/pass1.c
        userland/sbin/sfsck/pass2.c
        userland/sbin/sfsck/passes.h
        userland/sbin/sfsck/sb.c
        userland/sbin/sfsck/sb.h
        userland/sbin/sfsck/sfs.c
        userland/sbin/sfsck/sfs.h
        userland/sbin/sfsck/utils.c
        userland/sbin/sfsck/utils.h
        userland/testbin/add/add.c
        userland/testbin/argtest/argtest.c
        userland/testbin/badcall/bad_chdir.c
        userland/testbin/badcall/bad_close.c
        userland/testbin/badcall/bad_dup2.c
        userland/testbin/badcall/bad_execv.c
        userland/testbin/badcall/bad_fsync.c
        userland/testbin/badcall/bad_ftruncate.c
        userland/testbin/badcall/bad_getcwd.c
        userland/testbin/badcall/bad_getdirentry.c
        userland/testbin/badcall/bad_ioctl.c
        userland/testbin/badcall/bad_link.c
        userland/testbin/badcall/bad_lseek.c
        userland/testbin/badcall/bad_mkdir.c
        userland/testbin/badcall/bad_open.c
        userland/testbin/badcall/bad_pipe.c
        userland/testbin/badcall/bad_read.c
        userland/testbin/badcall/bad_readlink.c
        userland/testbin/badcall/bad_reboot.c
        userland/testbin/badcall/bad_remove.c
        userland/testbin/badcall/bad_rename.c
        userland/testbin/badcall/bad_rmdir.c
        userland/testbin/badcall/bad_sbrk.c
        userland/testbin/badcall/bad_stat.c
        userland/testbin/badcall/bad_symlink.c
        userland/testbin/badcall/bad_time.c
        userland/testbin/badcall/bad_waitpid.c
        userland/testbin/badcall/bad_write.c
        userland/testbin/badcall/common_buf.c
        userland/testbin/badcall/common_fds.c
        userland/testbin/badcall/common_path.c
        userland/testbin/badcall/config.h
        userland/testbin/badcall/driver.c
        userland/testbin/badcall/test.h
        userland/testbin/bigexec/bigexec.c
        userland/testbin/bigfile/bigfile.c
        userland/testbin/bigseek/bigseek.c
        userland/testbin/bloat/bloat.c
        userland/testbin/conman/conman.c
        userland/testbin/crash/crash.c
        userland/testbin/ctest/ctest.c
        userland/testbin/dirconc/dirconc.c
        userland/testbin/dirseek/dirseek.c
        userland/testbin/dirtest/dirtest.c
        userland/testbin/f_test/f_hdr.h
        userland/testbin/f_test/f_read.c
        userland/testbin/f_test/f_test.c
        userland/testbin/f_test/f_write.c
        userland/testbin/factorial/factorial.c
        userland/testbin/farm/farm.c
        userland/testbin/faulter/faulter.c
        userland/testbin/filetest/filetest.c
        userland/testbin/forkbomb/forkbomb.c
        userland/testbin/forktest/forktest.c
        userland/testbin/frack/check.c
        userland/testbin/frack/check.h
        userland/testbin/frack/data.c
        userland/testbin/frack/data.h
        userland/testbin/frack/do.c
        userland/testbin/frack/do.h
        userland/testbin/frack/main.c
        userland/testbin/frack/main.h
        userland/testbin/frack/name.c
        userland/testbin/frack/name.h
        userland/testbin/frack/ops.c
        userland/testbin/frack/ops.h
        userland/testbin/frack/pool.c
        userland/testbin/frack/pool.h
        userland/testbin/frack/workloads.c
        userland/testbin/frack/workloads.h
        userland/testbin/guzzle/guzzle.c
        userland/testbin/hash/hash.c
        userland/testbin/hog/hog.c
        userland/testbin/huge/huge.c
        userland/testbin/kitchen/kitchen.c
        userland/testbin/malloctest/malloctest.c
        userland/testbin/matmult/matmult-orig.c
        userland/testbin/matmult/matmult.c
        userland/testbin/multiexec/multiexec.c
        userland/testbin/palin/palin.c
        userland/testbin/parallelvm/parallelvm.c
        userland/testbin/poisondisk/poisondisk.c
        userland/testbin/psort/psort.c
        userland/testbin/quinthuge/quinthuge.c
        userland/testbin/quintmat/quintmat.c
        userland/testbin/quintsort/quintsort.c
        userland/testbin/randcall/extern.h
        userland/testbin/randcall/main.c
        userland/testbin/redirect/redirect.c
        userland/testbin/rmdirtest/rmdirtest.c
        userland/testbin/rmtest/rmtest.c
        userland/testbin/sbrktest/sbrktest.c
        userland/testbin/sink/sink.c
        userland/testbin/sort/sort.c
        userland/testbin/sparsefile/sparsefile.c
        userland/testbin/sty/sty.c
        userland/testbin/tail/tail.c
        userland/testbin/tictac/tictac.c
        userland/testbin/triplehuge/triplehuge.c
        userland/testbin/triplemat/triplemat.c
        userland/testbin/triplesort/triplesort.c
        userland/testbin/usemtest/usemtest.c
        userland/testbin/userthreads/userthreads.c
        userland/testbin/zero/zero.c
        userland/Makefile
        CHANGES
        configure
        defs.mk
        Makefile)
